examples/ill-formed/scheme/general/RepeatedMethod.scheme
import 'examples/ill-formed/fixtures/EmptyPrimitive.primitive';

Scheme Repeated() extends EmptyPrimitive {
    Void f() {}
    Void f() {}
}
